<resources>
    <string name="app_name">Adanianlabs interview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_back">icon Back</string>
    <string name="settings">Settings</string>
    <string name="edit_training">Edit training</string>
    <string name="options">options</string>
    <string name="calendar">Calendar</string>
    <string name="save">Save</string>
    <string name="cycling">Cycling</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="time">Time</string>
    <string name="trekking">Trekking</string>
    <string name="change_sport">Change Sport</string>
    <string name="change_date">Change date</string>
    <string name="go_back">Go back</string>
    <string name="training_saved">Training Saved!</string>
    <string name="paragraph">You successfully edited your training.\nPress button \"Go Back\" to check your\nedited training</string>
</resources>