<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical">


        <View
            android:layout_width="120dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:background="@color/colorBottomGrey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/training_saved"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/paragraph"
        android:textColor="@color/Grey" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:contentDescription="@string/training_saved"
        android:layout_gravity="center"
        android:src="@drawable/file"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="50dp" />


</LinearLayout>