<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditTrainingFragment">

   <RelativeLayout
       android:id="@+id/rl.top"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginEnd="35dp"
       android:layout_marginStart="35dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <ImageView
           android:id="@+id/ivBack"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:src="@drawable/ic_back"
           android:padding="13dp"
           android:contentDescription="@string/icon_back"
           app:tint="@color/black" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:text="@string/edit_training"
           android:textColor="@color/black"
           android:layout_toEndOf="@id/ivBack"
           android:layout_toStartOf="@id/ivSettings"
           android:gravity="center"
           android:textSize="17sp"
           android:textStyle="bold" />

       <ImageView
           android:id="@+id/ivSettings"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:layout_alignParentEnd="true"
           android:contentDescription="@string/settings"
           android:padding="13dp"
           android:src="@drawable/setting"
           app:tint="@color/black" />

   </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl.top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/cvRunning"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/background_shape"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvRunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/running"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvRunning"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="15dp"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:padding="5dp"
                            android:contentDescription="@string/calendar"
                            android:src="@drawable/calendar"/>
                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23.08.21  "
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginStart="6dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvRunning"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="10dp"
                    android:layout_toEndOf="@+id/cv1"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:padding="5dp"
                            android:contentDescription="@string/time"
                            android:src="@drawable/time"/>
                        <TextView
                            android:id="@+id/tvDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3 days left  "
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginStart="6dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_sport"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvRunning"
                />

            <ImageView
                android:id="@+id/ivOptions4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/options"
                android:src="@drawable/options"
                android:padding="13dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv1"
                app:layout_constraintEnd_toEndOf="@+id/cvRunning"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv1"
                app:layout_constraintTop_toBottomOf="@+id/tv1"
                app:layout_constraintTop_toTopOf="@+id/tv1"
                app:layout_constraintVertical_bias="0.75"
                app:tint="@color/Grey" />

            <RelativeLayout
                android:id="@+id/rl.Running"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/clicked_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rl.cycling"
                app:layout_constraintTop_toBottomOf="@id/tv1">

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/running"
                    android:src="@drawable/running" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp"
                    android:text="@string/running"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl.cycling"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_bg"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                app:layout_constraintStart_toEndOf="@id/rl.Running"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/cycling"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/bicycle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp"
                    android:text="@string/cycling"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl.walking"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_bg"
                app:layout_constraintTop_toBottomOf="@id/rl.Running"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rl.cycling">

                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/walking"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/walking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp"
                    android:text="@string/walking"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl.tracking"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_bg"
                app:layout_constraintTop_toBottomOf="@id/rl.cycling"
                app:layout_constraintStart_toEndOf="@id/rl.walking"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/trekking"
                    android:src="@drawable/treking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp"
                    android:text="@string/trekking"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:text="@string/change_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl.walking" />

            <ImageView
                android:id="@+id/ivOptionsDate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/options"
                android:padding="13dp"
                android:src="@drawable/options"
                app:layout_constraintBottom_toBottomOf="@+id/tv2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.827"
                app:layout_constraintStart_toEndOf="@+id/tv2"
                app:layout_constraintTop_toTopOf="@+id/tv2"
                app:layout_constraintVertical_bias="0.571"
                app:tint="@color/Grey" />

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/calendar_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                app:cornerRadius="50dp"
                android:textSize="13sp"
                android:text="@string/save"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar"
                android:layout_marginBottom="55dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>